--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,8 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap');
-
-* {
-  font-family: 'Noto Sans KR', -apple-system, BlinkMacSystemFont, sans-serif !important;
-}
+@import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,400;0,500;1,400;1,500&family=DM+Mono:ital,wght@0,400;0,500;1,400;1,500&display=swap')
+layer(base);
 
 @import 'tailwindcss';
 @plugin '@tailwindcss/typography';
